cmake_minimum_required(VERSION 3.13) # CMake version check.
project(YoussefLand_CMake_Collaboration) # Create project "YoussefLand_CMake_Collaboration".
set(CMAKE_CXX_STANDARD 14)

# Add cpp.cpp file of project root directory as source file
set(SOURCE_FILES cpp.cpp)

# Add executable target with source files listed in variables
add_executable(YoussefLand_CMake_Collaboration ${cout})
add_executable(YoussefLand_CMake_Collaboration ${cin})
